--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-redux": "^9.1.2",
+    "react-spinners": "^0.17.0",
     "tailwind-merge": "^2.5.4",
     "usehooks-ts": "^3.1.0",
     "xlsx": "^0.18.5",
